BoaUAT/src/objects/Stock_Count_Per_Location__c.object
<CustomObject>
    <fields>
        <fullName>MYOB_code_in_EXO__c</fullName>
        <externalId>true</externalId>
        <label>MYOB code in EXO</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Stock__c</fullName>
        <label>Maximum Stock</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Stock__c</fullName>
        <label>Minimum Stock</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physical_Quantity__c</fullName>
        <label>Physical Quantity</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stock_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stock Item</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Stock Count Per Locations</relationshipLabel>
        <relationshipName>Stock_Count_Per_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stock_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stock Location</label>
        <referenceTo>Stock_Location__c</referenceTo>
        <relationshipLabel>Stock Count Per Locations</relationshipLabel>
        <relationshipName>Stock_Count_Per_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Stock Count Per Location</label>
    <nameField>
        <displayFormat>SC-{000000}</displayFormat>
        <label>Stock Count Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Count Per Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>